<resources>
    <string name="app_name">Semurb</string>
    <string name="matricula"> Digite sua Matrícula:</string>
    <string name="senha"> Digite sua senha:</string>
    <string name="entrar">Entrar</string>
    <string name="PesquisarData">Pesquisar data…</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="secretaria_de_mobilidade_urbana">Secretaria de Mobilidade Urbana</string>
    <string name="semurb">SEMURB</string>
    <string name="semurblogo">SemurbLogo</string>
    <string name="Home_Procurar">Procurar</string>
    <string name="Home">Home</string>
    <string name="reparos">Reparos</string>
    <string name="bem_vindo">Bem Vindo!</string>
    <string name="nome">(Nome)</string>
    <string name="PoliticasPrivacidade">Políticas e Privacidade</string>
    <string name="Sobre">Sobre</string>
    <string name="TermosCondicoes">Termos e Condições</string>
    <string name="historico">Historico</string>
    <string name="notificacao">Notificação</string>
    <string name="qr_home">Qr_Home</string>
    <string name="categorias">CATEGORIAS</string>
    <string name="categorias2">Categorias</string>
    <string name="barueri_home">Barueri_Home</string>
    <string name="foto_home">Foto_Home</string>
    <string name="ocorrencia">Ocorrência</string>
    <string name="botao_inspecao_home">Botao_Inspecao_Home</string>
    <string name="viario_home">Viario_Home</string>
    <string name="perfil">Perfil</string>
    <string name="home">Home</string>
    <string name="PERFIL">PERFIL</string>
    <string name="leitor_qr">LEITOR QR</string>
    <string name="Claro">Claro ou Escuro</string>
    <string name="ir_para_o_site">Ir para o site</string>
    <string name="alto_contraste">Alto Contraste</string>
    <string name="sobre">Sobre</string>
    <string name="perfil2">Perfil</string>
    <string name="config">Config.</string>
    <string name="perfil_logo">perfil_logo</string>
    <string name="termos">termos</string>
    <string name="politica">politicas</string>
    <string name="contraste">contraste</string>
    <string name="site">site</string>
    <string name="modo">modo</string>
    <string name="configura_es_gerais">Configurações Gerais</string>
    <string name="modo2">Modo</string>
    <string name="pol_tica_e_privacidade">Política e Privacidade</string>
    <string name="logout">Logout</string>
    <string name="termos_e_condi_es">Termos e Condições</string>
    <string name="baruerilogo">baruerilogo</string>
    <string name="home2">home2</string>
    <string name="configuracoes">CONFIG</string>
    <string name="voltar">voltar</string>
    <string name="editar">editar</string>
    <string name="id_numero">XXXXXX</string>
    <string name="id">Id:</string>
    <string name="matri">Matrícula:</string>
    <string name="patente">Patente:</string>
    <string name="Equipe">Equipe:</string>
    <string name="perfil_nome">XXXX XXXX XXXX</string>
    <string name="estat_gerais">Estatísticas Gerais</string>
    <string name="inspe_es">Inspeções: XX</string>
    <string name="ocorrencias">Ocorrências</string>
    <string name="placeholder_estatisticas">XX</string>
    <string name="servi_os">Serviços:</string>
    <string name="foto">foto</string>
    <string name="verificar_turno">Verificar Turno</string>
    <string name="configura">Configurações</string>
    <string name="olho_senha">olho_senha</string>
    <string name="login">LOGIN</string>
    <string name="botaoperfilhome">botaoperfilhome</string>
    <string name="botaovoltarconfig">botaovoltarconfig</string>
    <string name="logoutconfig">logoutconfig</string>
    <string name="botaoperfilconfig">botaoperfilconfig</string>
    <string name="buscar_n_viatura">Buscar por n° da viatura…</string>
    <string name="Escolha_viatura">Escolha a viatura que será utilizada durante o turno:</string>
    <string name="Verificacao_turno">Verificação de Turno</string>
    <string name="proximo">Próximo</string>
    <string name="buscar_agentes">Buscar agentes…</string>
    <string name="quais_agentes">Quais agentes irão trabalhar junto com você?</string>
    <string name="quem_sera">Quem será o motorista?</string>
    <string name="confirmar_trabalho">Confirme quem está trabalhando com você!</string>
    <string name="auxiliar">Auxiliar</string>
    <string name="encarregado">Encarregado</string>
    <string name="viatura">Viatura</string>
    <string name="motorista">Motorista</string>
    <string name="todo">TODO</string>
    <string name="servico_viario">Serviço Viário</string>
    <string name="listagem_viario">Listagem de Sinalizações</string>
    <string name="nova_adicao">Nova Adição</string>
    <string name="enviar">Enviar</string>
    <string name="confirmar_viario">Confirme as informarções do plantão:</string>
    <string name="tipo_sugere">Qual tipo de alteração você sugere?</string>
    <string name="ineficiente">Sinalização ineficiente</string>
    <string name="substitui_o">Substituição</string>
    <string name="sugest_o">Sugestão</string>
    <string name="endereco">Digite o endereço...</string>
    <string name="endereco2">Endereço</string>
    <string name="escreva">Escreva Aqui…</string>
    <string name="descricao_viario">Descrição</string>
    <string name="categorias23">CATEGORIAS</string>
    <string name="atendimento">Atendimento ao Cidadão</string>
    <string name="listagemoc">Listagem de Ocorrências</string>
    <string name="novaoc">Nova Ocorrência</string>
    <string name="novasi">Nova Sinalização</string>
    <string name="Grande_Vulto">Sinistro de Grande Vulto</string>
    <string name="sinistrotra">Sinistro de Trânsito</string>
    <string name="contact">Contato</string>
    <string name="digite_contato">Digite o número de contato…</string>
    <string name="digite_nome">Digite o nome do atendido…</string>
    <string name="perilnav">Perfil</string>
    <string name="xxxx_xxxx">XXXX XXXX</string>
    <string name="excluir">Excluir</string>
    <string name="finalizar">Finalizar</string>
    <string name="detalhamento">Detalhamento</string>
    <string name="qual_tipo_ocorrencia">Qual foi o tipo de ocorrência?</string>
    <string name="tipo_sinalizacao">Tipo de Sinalização</string>
    <string name="tipo_de_ocorrencia">Tipo de Ocorrência</string>
    <string name="contato">Contato</string>
    <string name="notificacoes">Notificações</string>
    <string name="naolidas">Notificações Novas</string>
    <string name="lidas">Notificações Lidas</string>
    <string name="deslize_lado">Deslize para o lado para marcar como lida</string>
    <string name="deslize_excluir">Deslize para o lado para excluir</string>
    <string name="agente_inspecao">Agente XXXX XXXX</string>
    <string name="xxxx_inspecao">Inspeção da Viatura XXXX XXXX</string>
    <string name="confirme_info">Confirme as informações</string>
    <string name="num_inspecao">Número da viatura</string>
    <string name="motorista_turno">Motorista do Turno</string>
    <string name="frente">Frente</string>
    <string name="descricao_dano">Descrição do dano...</string>
    <string name="partesemavaria">Parte sem Avária</string>
    <string name="veiculosemavaria">Sem Avárias no veículo</string>
    <string name="registre_qual">Registre qualquer avaria das seguintes partes do veículo:</string>
    <string name="houve_avaria">Houve qualquer avaria na viatura?</string>
    <string name="rb_sim_avaria">Sim, há avarias.</string>
    <string name="rb_nao_avaria">Não, não há avarias</string>
    <string name="lateral_direita">Lateral Direita</string>
    <string name="lateral_esquerda">Lateral Esquerda</string>
    <string name="traseira">Traseira</string>
    <string name="outra">Outra Avária</string>
    <string name="historicos">Históricos</string>
    <string name="tudo">Tudo</string>
    <string name="ver_mais">Clique em um item para ver mais</string>
    <string name="fim_historico">Você chegou ao fim do histórico</string>
    <string name="Justificativa">Justificativa</string>
    <string name="preencha_detalhamento">Preencha o detalhamento:</string>
    <string name="digite_o_motivo">Digite o motivo</string>
    <string name="nome_contato">Nome do Contato</string>
    <string name="notifica_o_de_turno">Notificação de Turno</string>
    <string name="RuaPlaceholder">Rua Place holder</string>
    <string name="OcoAvaPlaceholder">OcoAva Place holder</string>
    <string name="OQPH">O que foi PH</string>
    <string name="preencherLocalizacao">Clique para preencher com a localização atual</string>
    <string-array name="historico">
        <item>Tudo          </item>
        <item>Serviço Viário</item>
        <item>Ocorrências</item>
        <item>Inspeção</item>
    </string-array>
    

</resources>