<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/configuracoesactivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/texto_politica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="?attr/CorTextoPadrao"
            android:text="@string/pol_tica_e_privacidade"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnPolitica"
            app:layout_constraintStart_toEndOf="@+id/btnPolitica"
            app:layout_constraintTop_toTopOf="@+id/btnPolitica" />

        <TextView
            android:id="@+id/texto_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="?attr/CorTextoPadrao"
            android:text="@string/logout"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_logout"
            app:layout_constraintStart_toEndOf="@+id/btn_logout"
            app:layout_constraintTop_toTopOf="@+id/btn_logout" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="?attr/CorTextoPadrao"
            android:text="@string/termos_e_condi_es"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="25dp"
            android:textColor="?attr/CorTextoPadrao"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/modo2"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/configura_es_gerais"
            android:textSize="32sp"
            android:textColor="?attr/CorTextoPadrao"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline18" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/modo"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            app:srcCompat="@drawable/configuracoes_modo" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/contraste"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/configuracoes_contraste" />

        <ImageButton
            android:id="@+id/btnPolitica"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/politica"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9"
            app:srcCompat="@drawable/configuracoes_politica" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/termos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:srcCompat="@drawable/configuracoes_termos" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/sobre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView10"
            app:srcCompat="@drawable/configuracoes_sobre" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/btnTrocarTema"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="210dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            app:trackTint="@color/CinzaMedio" />


        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="210dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10"
            app:trackTint="@color/CinzaMedio" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/Claro"
            android:textColor="@color/CinzaMedio"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="?attr/CorTextoPadrao"
            android:text="@string/alto_contraste"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10" />


        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="?attr/CorTextoPadrao"
            android:text="@string/sobre"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/logoutconfig"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPolitica"
            app:srcCompat="@drawable/configuracoes_logout" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorFundoElementos"
            app:layout_constraintBottom_toTopOf="@+id/guideline18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline16">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/config"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>