<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btn_viario_home"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/viario_home"
        android:scaleType="fitCenter"
        android:src="@drawable/home_viario"
        app:layout_constraintEnd_toStartOf="@+id/btn_inspecao_home"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <ImageButton
        android:id="@+id/btn_historico_home"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ocorrencia"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_ocorrencia_home"
        app:layout_constraintTop_toBottomOf="@+id/btn_inspecao_home"
        app:srcCompat="@drawable/home_historico" />

    <ImageButton
        android:id="@+id/btn_inspecao_home"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/botao_inspecao_home"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_viario_home"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:srcCompat="@drawable/home_inspecao" />

    <ImageButton
        android:id="@+id/btn_ocorrencia_home"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/historico"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/btn_historico_home"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_viario_home"
        app:srcCompat="@drawable/home_ocorrencias" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.94" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/AzulPaginas"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="80dp"
            android:layout_height="99dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/foto_home"
            android:src="@drawable/home_foto" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_iniciarTurno"
            android:layout_width="250dp"
            android:layout_height="52dp"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_button"
            android:backgroundTintMode="add"
            android:elevation="15dp"
            android:fontFamily="@font/montserrat_medium"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowRadius="1"
            android:text="@string/verificar_turno"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginLeft="100dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/bem_vindo"
            android:textColor="#FFFFFF"
            android:textSize="18.84sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginLeft="100dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/nome"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/categorias"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

</androidx.constraintlayout.widget.ConstraintLayout>